<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.slickiesbrand.mycoolapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_events"
        android:orderInCategory="103"
        android:title="@string/Events"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_product"
        android:orderInCategory="103"
        android:title="@string/Product"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_aauaweb"
        android:orderInCategory="104"
        android:title="@string/AAUA_Android_web"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_upload"
        android:orderInCategory="0"
        android:title="@string/image_upload"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_upload"/>


</menu>
